--- a/views/partials/_header.html
+++ b/views/partials/_header.html
@@ -10,7 +10,6 @@
   <meta property="og:title" content="(주)씨앤에이아이" />
   <meta property="og:description" content="Change for New Normal" />
   <meta name="twitter:image" content="./img/common/og.jpeg" />
-
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="(주)씨앤에이아" />
   <meta name="twitter:description" content="(주)씨앤에이아이, Change for New Normal" />
@@ -37,7 +36,7 @@
 
   <!-- Semantic UI for Dropdown -->
 
-  <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
 
   <!-- Formantic ui  -->
