--- a/views/community.html
+++ b/views/community.html
@@ -209,7 +209,7 @@
   <p class= 'SubTitle_1 Gray_2 mb-5'>Official Channel</h5>
   <p class = 'Gray_1 Title_1'>CN.AI의 다양한 채널을 만나보세요.</h1>
 
-  <div class = 'row'>
+  <div class = 'row' style="height: 50vh">
     <div class = 'col'>
       <div class = 'col-12'>
         <div class="d-flex position-relative">
@@ -236,13 +236,13 @@
       </div>
     </div>
     </div>
-    <div class = 'col'>
-      <div class="row g-0 bg-light position-relative">     
-        <div class="col-md-6 p-4">
-          <p class = 'Label Gray_2 mt-5 '>GitHub.io</p>
-          <p class = 'Title_2_eng Gray_1  '>Tech blog</p>
+    <div class = 'col h-100'>
+      <div class="row g-0 bg-light position-relative h-100">     
+        <div class="col-md-6 p-4 h-100">
+          <p class = 'Label Gray_2 mt-5'>GitHub.io</p>
+          <p class = 'Title_2_eng Gray_1'>Tech blog</p>
             
-          <a href="#" class = 'position-absolute start-0 Gray_2' style = 'bottom:7vh;'><i class="bi bi-arrow-right-circle"></i></a>
+          <a href="#" class = 'position-absolute bottom-0 Gray_2' style = 'bottom:7vh;'><i class="bi bi-arrow-right-circle"></i></a>
         </div>
         <div class="col-md-6 mb-md-0 p-md-4">
           <img src= "img/1.jpeg" class="w-100" alt="...">
