--- a/views/community.html
+++ b/views/community.html
@@ -201,7 +201,7 @@
 
 </section>
 
-<section id = 'channel' class = 'position-relative' style = "height: 120vh;">
+<section id = 'channel' class = 'position-relative' style = "height: 150vh;">
   
 
 
@@ -212,58 +212,85 @@
   <div class = 'row' style="height: 50vh">
     <div class = 'col'>
       <div class = 'col-12'>
-        <div class="d-flex position-relative">
-          <!-- https://icons.getbootstrap.com/icons/arrow-right-circle/ -->
-          <div>
-            <h5 class="mt-0">Instagram</h5>
-            <p class = 'mt-5'>cnai.ai</p>
-            <a href="#" class="stretched-link"><i class="bi bi-arrow-right-circle"></i></a>
+        <div class="card p-4 h-100 Gray_5_bg border-0">
+          <div class="row g-0 h-100 ">
+         
+            <div class="col-md-8 h-100">
+              <div class="card-body d-flex flex-column h-100">
+                
+                <p class="Label Gray_2 mb-0">Instagram</p>
+                <p class="Title_2_eng Gray_1">cnai.ai</p>
+               
+                <a href="#" class="mt-auto Gray_2"><i class="bi bi-arrow-right-circle" style="font-size: 3rem;" ></i></a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <img src="img/1.jpeg" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
+            </div>
           </div>
-          <img src="/img/1.jpeg" class="flex-shrink-0 me-3" alt="...">
         </div>
       </div>
-      <div class = 'col-12'>
-        <div class="row g-0 bg-light position-relative">
-     
-        <div class="col-md-6 p-4 ps-md-0">
-          <h5 class="mt-0">Instagram</h5>
-          <p>cn.table</p>
-          <a href="#" class="stretched-link"><i class="bi bi-arrow-right-circle"></i></a>
-        </div>
-        <div class="col-md-6 mb-md-0 p-md-4">
-          <img src= "img/1.jpeg" class="w-100" alt="...">
+      <div class = 'col-12 mt-4'>
+      <div class="card p-4 h-100 Gray_5_bg border-0">
+        <div class="row g-0 h-100 ">
+       
+          <div class="col-md-8 h-100">
+            <div class="card-body d-flex flex-column h-100">
+              
+              <p class="Label Gray_2 mb-0">Instagram</p>
+              <p class="Title_2_eng Gray_1">cn.table</p>
+             
+              <a href="#" class="mt-auto Gray_2"><i class="bi bi-arrow-right-circle" style="font-size: 3rem;" ></i></a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <img src="img/1.jpeg" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
+          </div>
         </div>
       </div>
     </div>
     </div>
-    <div class = 'col h-100'>
-      <div class="row g-0 bg-light position-relative h-100">     
-        <div class="col-md-6 p-4 h-100">
-          <p class = 'Label Gray_2 mt-5'>GitHub.io</p>
-          <p class = 'Title_2_eng Gray_1'>Tech blog</p>
-            
-          <a href="#" class = 'position-absolute bottom-0 Gray_2' style = 'bottom:7vh;'><i class="bi bi-arrow-right-circle"></i></a>
-        </div>
-        <div class="col-md-6 mb-md-0 p-md-4">
-          <img src= "img/1.jpeg" class="w-100" alt="...">
+    <div class = 'col'>
+      <div class="card p-4 h-100 Gray_5_bg border-0">
+        <div class="row g-0 h-100 ">
+       
+          <div class="col-md-8 h-100">
+            <div class="card-body d-flex flex-column h-100">
+              
+              <p class="Label Gray_2 mb-0">GitHub.io</p>
+              <p class="Title_2_eng Gray_1">Tech blog</p>
+             
+              <a href="#" class="mt-auto Gray_2"><i class="bi bi-arrow-right-circle" style="font-size: 3rem;" ></i></a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <img src="img/1.jpeg" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
+          </div>
         </div>
       </div>
 
-      <!-- <div class = 'row g-0 bg-light position-relative'>
-        <div class='"col-md-6 p-4 ps-md-0'>
-          <p class = 'Label Gray_2 mt-5 '>GitHub.io</p>
-          <p class = 'Title_2_eng Gray_1  '>Tech blog</p>
-            
-          <p class = 'position-absolute start-50 translate-middle-x Label Gray_1' style = 'bottom:7vh;'><i class="bi bi-arrow-right-circle"></i> 
-      
-          </p>
-        </div>
-          <div class='col-md-6 mb-md-0 p-md-4'>
-            <img src="/img/1.jpeg" class="img-fluid w-100" alt="...">
-          </div>
-        </div> -->
+
     </div>
-    <div class = 'col'>CNAI</div>
+    <div class="col">
+
+      <div class="card p-4 h-100 Gray_5_bg border-0">
+        <div class="row g-0 h-100 ">
+       
+          <div class="col-md-8 h-100">
+            <div class="card-body d-flex flex-column h-100">
+              
+              <p class="Label Gray_2 mb-0">Youtube</p>
+              <p class="Title_2_eng Gray_1">CNAI</p>
+             
+              <a href="#" class="mt-auto Gray_2"><i class="bi bi-arrow-right-circle" style="font-size: 3rem;" ></i></a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <img src="img/1.jpeg" class="img-fluid rounded-start" style="height: 5rem;" alt="...">
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -271,12 +298,13 @@
 
 
 
-  <section class="py-5 text-center container-fluid mb-5 text-light" id = 'btn-career'  style="height: 100vh;background: linear-gradient(180deg, #7E53FF -8.57%, rgba(126, 83, 255, 0) 46.58%), #5A54F5;">
-    <div style="margin-top: 40vh;" data-aos="fade-up">
-        <h1>CN.AI 팀원들의 이야기가 궁금하다면 </h1>
-        <div class = 'ui button'>CAREER</div>
-    </div>
-  </section>
+<section class="py-5 text-center container-fluid text-light" id="btn-career" style="height: 38vh;background: linear-gradient(180deg, #7E53FF -8.57%, rgba(126, 83, 255, 0) 46.58%), #5A54F5;">
+  <div style="margin-top:5vh" data-aos="fade-up" class="aos-init aos-animate">
+    <!-- position-absolute 쓰면 fade up 불가 -->
+      <h1>CN.AI 팀원들의 이야기가 궁금하다면 </h1>
+      <div class="ui button">CAREER</div>
+  </div>
+</section>
 
 
  
@@ -288,7 +316,7 @@
 <script>
 // external js: isotope.pkgd.js
 
-$(document).ready(function() {
+
 
 // init Isotope
 var $container = $('.isotope').isotope({
@@ -402,8 +430,6 @@ $("#filters").click(function() {
 });
 
 
-
-});
 
 </script>
     
